#
# Copyright (C) 2020-2021 QuasarApp.
# Distributed under the lgplv3 software license, see the accompanying
# Everyone is permitted to copy and distribute verbatim copies
# of this license document, but changing it is not allowed.
#

cmake_minimum_required(VERSION 3.14)



set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


include(../submodules/CMake/ProjectOut.cmake)
include(../submodules/CMake/Version.cmake)
include(../submodules/CMake/QtUtils.cmake)
include(../submodules/CMake/crossplatform/crossplatform.cmake)

add_subdirectory(Library)
add_subdirectory(Example)
